--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,3 +1,85 @@
+.wrapper
 .board-container {
-    width: 230px;
+  width: 290px;
+  position: relative;
+  margin: 0 auto;
+  button {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background-color: lightblue;
+    border: 1px solid black;
+    outline: none;
+    margin: 1px;
+    &.clicked {
+      background-color: #fff;
+      &[value='0'] {
+        background-color: #fff;
+      }
+      &[value='1']:before {
+        content: "1";
+      }
+      &[value='2']:before {
+        content: "2";
+      }
+      &[value='3']:before {
+        content: "3";
+      }
+      &[value='4']:before {
+        content: "4";
+      }
+      &[value='5']:before {
+        content: "5";
+      }
+      &[value='6']:before {
+        content: "6";
+      }
+      &[value='7']:before {
+        content: "7";
+      }
+      &[value='8']:before {
+        content: "8";
+      }
+      &[value='9']:before {
+        content: "💣";
+      }
+    }
+    &.flagged:before {
+      content: "🏴";
+    }
+    &:before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+  &.game-lost:before,
+  &.game-won:before {
+    content: "";
+    position: absolute;
+    z-index: 998;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.7;
+    
+  }
+  &.game-lost:after,
+  &.game-won:after {
+    position: absolute;
+    z-index: 999;
+    font-size: 30px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  &.game-lost:after {
+    content: 'You Lose';
+    color: red;
+  }
+  &.game-won:after {
+    content: 'You Win';
+    color: green;
+  }
 }
