--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -13,34 +13,34 @@
     margin: 1px;
     &.clicked {
       background-color: #fff;
-      &[value='0'] {
+      &[data-value='0'] {
         background-color: #fff;
       }
-      &[value='1']:before {
+      &[data-value='1']:before {
         content: "1";
       }
-      &[value='2']:before {
+      &[data-value='2']:before {
         content: "2";
       }
-      &[value='3']:before {
+      &[data-value='3']:before {
         content: "3";
       }
-      &[value='4']:before {
+      &[data-value='4']:before {
         content: "4";
       }
-      &[value='5']:before {
+      &[data-value='5']:before {
         content: "5";
       }
-      &[value='6']:before {
+      &[data-value='6']:before {
         content: "6";
       }
-      &[value='7']:before {
+      &[data-value='7']:before {
         content: "7";
       }
-      &[value='8']:before {
+      &[data-value='8']:before {
         content: "8";
       }
-      &[value='9']:before {
+      &[data-value='9']:before {
         content: "💣";
       }
     }
