--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,85 +1,105 @@
-.wrapper
-.board-container {
-  width: 290px;
-  position: relative;
-  margin: 0 auto;
-  button {
+:root {
+  --width: 9;
+  --height: 9;
+  --tile-size: 30px;
+}
+.wrapper {
+  display: flex;
+  align-items: flex-start;
+  .board-container {
+    width: calc(var(--width) * var(--tile-size));
     position: relative;
-    width: 30px;
-    height: 30px;
-    background-color: lightblue;
-    border: 1px solid black;
-    outline: none;
-    margin: 1px;
-    &.clicked {
-      background-color: #fff;
-      &[data-value='0'] {
+    button {
+      position: relative;
+      width: var(--tile-size);
+      height: var(--tile-size);
+      background-color: lightblue;
+      //border: 0;
+      padding: 0;
+      outline: none;
+      box-sizing: border-box;
+      display: block;
+      float: left;
+      &.clicked {
         background-color: #fff;
+        &[data-value='0'] {
+          background-color: #fff;
+        }
+        &[data-value='1']:before {
+          content: "1";
+        }
+        &[data-value='2']:before {
+          content: "2";
+        }
+        &[data-value='3']:before {
+          content: "3";
+        }
+        &[data-value='4']:before {
+          content: "4";
+        }
+        &[data-value='5']:before {
+          content: "5";
+        }
+        &[data-value='6']:before {
+          content: "6";
+        }
+        &[data-value='7']:before {
+          content: "7";
+        }
+        &[data-value='8']:before {
+          content: "8";
+        }
+        &[data-value='9']:before {
+          content: "💣";
+        }
       }
-      &[data-value='1']:before {
-        content: "1";
+      &.flagged:before {
+        content: "🏴";
       }
-      &[data-value='2']:before {
-        content: "2";
-      }
-      &[data-value='3']:before {
-        content: "3";
-      }
-      &[data-value='4']:before {
-        content: "4";
-      }
-      &[data-value='5']:before {
-        content: "5";
-      }
-      &[data-value='6']:before {
-        content: "6";
-      }
-      &[data-value='7']:before {
-        content: "7";
-      }
-      &[data-value='8']:before {
-        content: "8";
-      }
-      &[data-value='9']:before {
-        content: "💣";
+      &:before {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     }
-    &.flagged:before {
-      content: "🏴";
-    }
-    &:before {
+    &.game-lost:before,
+    &.game-won:before {
+      content: "";
       position: absolute;
+      z-index: 998;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      opacity: 0.7;
+
+    }
+    &.game-lost:after,
+    &.game-won:after {
+      position: absolute;
+      z-index: 999;
+      font-size: 30px;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
     }
+    &.game-lost:after {
+      content: 'You Lose';
+      color: red;
+    }
+    &.game-won:after {
+      content: 'You Win';
+      color: green;
+    }
   }
-  &.game-lost:before,
-  &.game-won:before {
-    content: "";
-    position: absolute;
-    z-index: 998;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    opacity: 0.7;
-    
-  }
-  &.game-lost:after,
-  &.game-won:after {
-    position: absolute;
-    z-index: 999;
-    font-size: 30px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  &.game-lost:after {
-    content: 'You Lose';
-    color: red;
-  }
-  &.game-won:after {
-    content: 'You Win';
-    color: green;
+  .diff-choose {
+    display: inline-block;
+    padding: 20px;
+    background-color: lightgrey;
+    border: 2px solid black;
+    margin-right: 20px;
+    .diff-form {
+      margin-bottom: 10px;
+    }
   }
 }
